@@ -19,6 +19,14 @@
 ################################################################
 
 
+2013-12-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999976 released.
+
+        * Updated Makefile.PL to do more thorough requirements
+          testing for legacy Cygwin installations.
+
+
 2013-12-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999975 released.
